src/components/UserStoryCard.module.css
.card {
  background-color: #1a1a1a;
  border-radius: 0.5rem;
  transition:
    transform 0.3s ease-in-out,
    box-shadow 0.3s ease-in-out;
  border: 1px solid #333;
  overflow: hidden;
  margin: 1.5rem;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}
@media (prefers-color-scheme: light) {
  .card {
    border: 1px solid #7e7e7e;
    background-color: white;
  }
}

.card:hover {
  transform: translateY(-4px);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
}

.cardInner {
  display: flex;
  gap: 1.5rem;
  padding: 1.5rem;
  align-items: center;
}

.imageWrapper {
  flex-shrink: 0;
  width: 150px; /* Slightly larger for better visibility */
  aspect-ratio: 1/1; /* Maintains a perfect square */
  border-radius: 0.375rem;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.image {
  width: 100%;
  height: 100%;
  object-fit: contain; /* Ensures full image is visible */
}

.content {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.title {
  color: #fff;
  font-size: 1.25rem;
  font-weight: 600;
  margin: 0;
  line-height: 1.4;
}
@media (prefers-color-scheme: light) {
  .title {
    color: black;
  }
}

.date {
  color: #888;
  font-size: 0.875rem;
  display: inline;
}

.metaInfo {
  display: flex;
  align-items: center;
  gap: 0.35rem;
  margin: 0.5rem 0;
}

.separator {
  color: #8e8e8e;
  margin: 0 0.25rem;
}

jio-read-time-estimation {
  color: #e0e0e0;
  opacity: 0.72;
  font-size: 0.875rem;
  margin-left: 0.2rem;
}

.tagline {
  color: #bbb;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
}

.readMore {
  color: white;
  font-size: 0.875rem;
  font-weight: 500;
  text-decoration: none;
  transition:
    color 0.2s ease,
    border-color 0.2s ease;
  border: 1px solid white;
  border-radius: 10px;
  padding: 0.5rem 0.75rem;
  align-self: flex-start;
}
@media (prefers-color-scheme: light) {
  .readMore {
    border: 1px solid black;
    color: black;
  }
}

.readMore:hover {
  color: #60a5fa;
  border-color: #60a5fa;
}

/* Responsive Design */
@media (max-width: 640px) {
  .cardInner {
    flex-direction: column;
    gap: 1rem;
  }

  .imageWrapper {
    width: 100%;
    height: auto;
  }

  .image {
    height: auto;
  }
}

